k8s/deployment-be.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: confighub-be-deployment
  labels:
    app: confighub
spec:
  replicas: 1
  selector:
    matchLabels:
      app: confighub
  template:
    metadata:
      labels:
        app: confighub
    spec:
      containers:
      - name: confighub
        image: jerome3o/scratch:0.0.1
        ports:
        - containerPort: 8000
