k8s/statefulset-db.yaml
apiVersion: apps/v1
kind: StatefulSet
metadata:
  name: confighub-db-statefulset
  labels:
    app: confighub-db
spec:
  serviceName: confighub-db
  replicas: 1
  selector:
    matchLabels:
      app: confighub-db
  template:
    metadata:
      labels:
        app: confighub-db
    spec:
      containers:
        - name: confighub-db
          image: postgres:10
          imagePullPolicy: IfNotPresent
          ports:
            - containerPort: 5432
