k8s/service-be.yaml
apiVersion: v1
kind: Service
metadata:
  name: confighub-be-service
spec:
  selector:
    app: confighub
  ports:
    - protocol: TCP
      port: 80
      targetPort: 8000
