k8s/ingress-be.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: confighub-be-ingress
  annotations:
    nginx.ingress.kubernetes.io/rewrite-target: /
spec:
  rules:
  - host: confighub.lan
    http:
      paths:
      - path: /
        pathType: Prefix
        backend:
          service:
            name: confighub-be-service
            port:
              number: 80
